<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="org.noel.dunsceal.viewmodel.AddEditDunViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.noel.dunsceal.main.ScrollChildSwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:enabled="@{viewmodel.dataLoading}"
            app:refreshing="@{viewmodel.dataLoading}">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                    <EditText
                        android:id="@+id/add_dun_title_edit_text"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:text="@={viewmodel.title}"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <EditText
                        android:id="@+id/add_dun_description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="169dp"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/description_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:text="@={viewmodel.description}" />

                    <EditText
                        android:id="@+id/dunTitle"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_dunTitle"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_dunDescription"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"/>


                    <Button
                        android:id="@+id/dunLocation"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorAccent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_location"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/chooseImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorAccent"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/button_addImage"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/dunImage"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorAccent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addDun"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>
            </ScrollView>
        </org.noel.dunsceal.main.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_dun_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_done"
            android:onClick="@{() -> viewmodel.saveDun()}"
            app:fabSize="normal"
            app:layout_anchor="@id/refresh_layout"
            app:layout_anchorGravity="bottom|right|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
